<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shop Stop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="btn_search_str">Search</string>
    <string name="search_keyword_str">Search for an item:</string>
    <string name="select_category_str">Select Category:</string>
    <string name="edittext_keyword_hint_str">Enter search keyword</string>
    
    <string-array name="category_array">
        <item>Business</item>
        <item>Astronomy</item>
        <item>Psychology</item>
        <item>Computer-Science</item>
    </string-array>
    
      <!-- Activity titles -->
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <!-- Labels -->
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>
    
    <!-- PaymentFormActivity strings -->
    <string name="card_number">Credit Card Number</string>
    <string name="card_expiry_date_year">Expiry Year</string>
    <string name="card_expiry_date_month">Expiry Month</string>    
    <string name="card_cvc">CVC</string>    
    <string name="user_address">Shipping Address</string>
    <string name="btn_checkout">Checkout</string>    
    
    <!-- Stripe Strings -->
    <string name="addPayment">Add Payment Method</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>
    <string name="cvc">CVC</string>
    <string name="ok">OK</string>
            
</resources>
