<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PaymentFormActivity" >
    
    <!-- Credit Card Number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_text_size"
            android:text="@string/card_number"
            android:textStyle="bold" />
        
        <EditText
            android:id="@+id/card_number_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>   

    <!-- Credit card Expiration Date -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_text_size"
            android:text="@string/card_expiry_date_year"
            android:textStyle="bold" />
        
        <Spinner 
            android:id="@+id/card_expiry_date_year_value" 
            style="@style/ExpYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
<!--         <EditText -->
<!--             android:id="@+id/card_expiry_date_year_value" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:inputType="text" /> -->

    </LinearLayout>   
    
    <!-- Credit card Expiration Date -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_text_size"
            android:text="@string/card_expiry_date_month"
            android:textStyle="bold" />
        
        <Spinner 
            android:id="@+id/card_expiry_date_month_value" 
            style="@style/ExpMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
<!--         <EditText -->
<!--             android:id="@+id/card_expiry_date_month_value" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:inputType="text" /> -->

    </LinearLayout>
        
    <!-- Credit Card CVC -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_text_size"
            android:text="@string/card_cvc"
            android:textStyle="bold" />
        
        <EditText
            android:id="@+id/card_cvc_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>   
    
    <!-- User mailing address -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_text_size"
            android:text="@string/user_address"
            android:textStyle="bold" />
        
        <EditText
            android:id="@+id/user_address_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </LinearLayout>   
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        >
        <Button 
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_checkout"
            android:background="@drawable/btn_orange_matte"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold" 
            android:onClick="onButtonClick" />    
    </LinearLayout>
        
</LinearLayout>